Fixed unaligned bar/logo

--- a/client/src/components/NavBar/NavBar.less
+++ b/client/src/components/NavBar/NavBar.less
@@ -1,21 +1,19 @@
 @import "../../assets/style.less";
 
 #navBar {
-  display: flex;
+   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: nowrap;
-  width: calc(100% - 60px);
+  left: 2vw;
+  width: 96vw;
   position: -webkit-sticky;
-  position: fixed;
-  top: 10px;
-  left: 30px;
+  position: absolute;
+  top: 1vh;
+  
   z-index: 2;
-  height: 8vh;
+  height: 4.8vh;
   background-color: #0f2b4e;
-  padding-right: 2em;
   border-radius: 10px;
-  //border: 5px solid #264366;
 
 
   #link {
